<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PizzaMenu">

    <RelativeLayout
        android:id="@+id/pizzaMenu"
        android:layout_width="230dp"
        android:layout_height="match_parent"
        android:background="@color/green" />

    <ScrollView
        android:id="@+id/SPizzaM"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/rowTital"
                android:layout_width="222dp"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tvpizzaMenu"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="20dp"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/pizzaMenu"
                    android:textColor="@color/white"
                    android:textSize="40sp" />
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/rowpizzamenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/cardpizza1"
                    android:layout_width="330dp"
                    android:layout_height="190dp"
                    android:layout_centerHorizontal="true"
                    app:cardCornerRadius="40dp"
                    android:background="@color/white">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/pizza1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="80dp"
                            android:text="@string/pizza1"
                            android:textSize="30sp"
                            android:textColor="@color/green"
                            android:fontFamily="@font/poppins_semibold"
                            />

                        <TextView
                            android:id="@+id/pizzainfo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/pizzainfo1"
                            android:layout_below="@id/pizza1"
                            android:fontFamily="@font/poppins_semibold"
                            android:layout_marginLeft="80dp"
                            android:textSize="14sp"
                            android:textColor="@color/green"
                            />

                        <RatingBar
                            android:id="@id/rating_pizza1"
                            style="@style/Widget.AppCompat.RatingBar.Indicator"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/pizzainfo"
                            android:layout_marginTop="1dp"
                            android:layout_marginLeft="80dp"
                            android:isIndicator="false"
                            android:progressTint="@color/Yellow" />

                        <TextView
                            android:id="@+id/tvpriceP1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/rating_pizza1"
                            android:layout_marginLeft="80dp"
                            android:text="@string/pprice1"
                            android:textSize="14sp"
                            android:textColor="@color/green"
                            android:fontFamily="@font/poppins_semibold"/>

                    </RelativeLayout>
                </com.google.android.material.card.MaterialCardView>

                <ImageView
                    android:id="@+id/imagpizza"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/paparonpizza"
                    android:elevation="2dp"
                    android:layout_margin="4dp"
                    />
<com.google.android.material.floatingactionbutton.FloatingActionButton
    android:id="@+id/fab_Pizza1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentEnd="true"
    android:layout_marginRight="6dp"
    app:tint="@color/green"
    android:backgroundTint="@color/white"
    android:src="@drawable/baseline_add_24" />
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/rowpizzamenu2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/cardpizza2"
                    android:layout_width="330dp"
                    android:layout_height="190dp"
                    android:layout_centerHorizontal="true"
                    app:cardCornerRadius="40dp"
                    android:background="@color/white">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/pizza2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="80dp"
                            android:text="@string/pizza2"
                            android:textSize="30sp"
                            android:textColor="@color/green"
                            android:fontFamily="@font/poppins_semibold"
                            />

                        <TextView
                            android:id="@+id/pizzainfo2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/pizzainfo2"
                            android:layout_below="@id/pizza2"
                            android:fontFamily="@font/poppins_semibold"
                            android:layout_marginLeft="80dp"
                            android:textSize="14sp"
                            android:textColor="@color/green"
                            />

                        <RatingBar
                            android:id="@id/ratingpizza2"
                            style="@style/Widget.AppCompat.RatingBar.Indicator"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/pizzainfo2"
                            android:layout_marginTop="1dp"
                            android:layout_marginLeft="80dp"
                            android:isIndicator="false"
                            android:progressTint="@color/Yellow" />

                        <TextView
                            android:id="@+id/tvpriceP2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/ratingpizza2"
                            android:layout_marginLeft="80dp"
                            android:text="@string/pprice2"
                            android:textSize="14sp"
                            android:textColor="@color/green"
                            android:fontFamily="@font/poppins_semibold"/>

                    </RelativeLayout>
                </com.google.android.material.card.MaterialCardView>

                <ImageView
                    android:id="@+id/imagpizza2"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/maxpizza"
                    android:elevation="2dp"
                    android:layout_margin="4dp"
                    />
                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/fabpizza2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginRight="6dp"
                    app:tint="@color/green"
                    android:backgroundTint="@color/white"
                    android:src="@drawable/baseline_add_24" />
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/rowpizzamenu3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/cardpizza3"
                    android:layout_width="330dp"
                    android:layout_height="190dp"
                    android:layout_centerHorizontal="true"
                    app:cardCornerRadius="40dp"
                    android:background="@color/white">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/pizza3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="80dp"
                            android:text="@string/pizza3"
                            android:textSize="30sp"
                            android:textColor="@color/green"
                            android:fontFamily="@font/poppins_semibold"
                            />

                        <TextView
                            android:id="@+id/pizzainfo3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/pizzainfo3"
                            android:layout_below="@id/pizza3"
                            android:fontFamily="@font/poppins_semibold"
                            android:layout_marginLeft="80dp"
                            android:textSize="14sp"
                            android:textColor="@color/green"
                            />

                        <RatingBar
                            android:id="@id/rating_pizza3"
                            style="@style/Widget.AppCompat.RatingBar.Indicator"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/pizzainfo3"
                            android:layout_marginTop="1dp"
                            android:layout_marginLeft="80dp"
                            android:isIndicator="false"
                            android:progressTint="@color/Yellow" />

                        <TextView
                            android:id="@+id/tvpriceP3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/rating_pizza3"
                            android:layout_marginLeft="80dp"
                            android:text="@string/pprice3"
                            android:textSize="14sp"
                            android:textColor="@color/green"
                            android:fontFamily="@font/poppins_semibold"/>

                    </RelativeLayout>
                </com.google.android.material.card.MaterialCardView>

                <ImageView
                    android:id="@+id/imagpizza3"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="4dp"
                    android:layout_marginBottom="4dp"
                    android:elevation="2dp"
                    android:src="@drawable/marpizza" />
                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/fabpizza3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginRight="6dp"
                    app:tint="@color/green"
                    android:backgroundTint="@color/white"
                    android:src="@drawable/baseline_add_24" />
            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

</FrameLayout>