<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".PastaMenu">


    <RelativeLayout
        android:id="@+id/pastsMenu"
        android:layout_width="230dp"
        android:layout_height="match_parent"
        android:background="@color/green" />

    <ScrollView
        android:id="@+id/PM"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/rowTital"
                android:layout_width="222dp"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tvpastaMenu"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="20dp"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/pasta"
                    android:textColor="@color/white"
                    android:textSize="40sp" />
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/rowpastamenu1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/cardpasta1"
                    android:layout_width="330dp"
                    android:layout_height="190dp"
                    android:layout_centerHorizontal="true"
                    app:cardCornerRadius="40dp"
                    android:background="@color/white">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/pasta1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="80dp"
                            android:text="@string/pasta1"
                            android:textSize="23sp"
                            android:textColor="@color/green"
                            android:fontFamily="@font/poppins_semibold"
                            />

                        <TextView
                            android:id="@+id/pasinfo1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/pastainfo1"
                            android:layout_below="@id/pasta1"
                            android:fontFamily="@font/poppins_semibold"
                            android:layout_marginLeft="80dp"
                            android:textSize="14sp"
                            android:textColor="@color/green"
                            />

                        <RatingBar
                            android:id="@id/rating_pasta1"
                            style="@style/Widget.AppCompat.RatingBar.Indicator"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/pasinfo1"
                            android:layout_marginTop="1dp"
                            android:layout_marginLeft="80dp"
                            android:isIndicator="false"
                            android:progressTint="@color/Yellow" />

                        <TextView
                            android:id="@+id/tvPprices1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/rating_pasta1"
                            android:layout_marginLeft="80dp"
                            android:text="@string/Pastaprice1"
                            android:textSize="14sp"
                            android:textColor="@color/green"
                            android:fontFamily="@font/poppins_semibold"/>

                    </RelativeLayout>
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/fabpasta1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginRight="6dp"
                    app:tint="@color/green"
                    android:backgroundTint="@color/white"
                    android:src="@drawable/baseline_add_24" />

                <ImageView
                    android:id="@+id/imagpasta1"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_margin="4dp"
                    android:elevation="2dp"
                    android:src="@drawable/spagiti" />
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/rowpastamenu2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/cardpasta2"
                    android:layout_width="330dp"
                    android:layout_height="190dp"
                    android:layout_centerHorizontal="true"
                    app:cardCornerRadius="40dp"
                    android:background="@color/white">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/pasta2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="80dp"
                            android:text="@string/pasta2"
                            android:textSize="23sp"
                            android:textColor="@color/green"
                            android:fontFamily="@font/poppins_semibold"
                            />

                        <TextView
                            android:id="@+id/pastainfo2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/pastainfo2"
                            android:layout_below="@id/pasta2"
                            android:fontFamily="@font/poppins_semibold"
                            android:layout_marginLeft="80dp"
                            android:textSize="14sp"
                            android:textColor="@color/green"
                            />

                        <RatingBar
                            android:id="@id/ratingpasta2"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_below="@+id/pastainfo2"
                            android:layout_marginLeft="80dp"
                            android:layout_marginTop="-1dp"
                            android:isIndicator="false"
                            android:progressTint="@color/Yellow" />

                        <TextView
                            android:id="@+id/tvPprices2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/ratingpasta2"
                            android:layout_marginLeft="80dp"
                            android:text="@string/Pastaprice2"
                            android:textSize="14sp"
                            android:textColor="@color/green"
                            android:fontFamily="@font/poppins_semibold"/>

                    </RelativeLayout>
                </com.google.android.material.card.MaterialCardView>

                <ImageView
                    android:id="@+id/imagpasta2"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="4dp"
                    android:layout_marginBottom="4dp"
                    android:elevation="2dp"
                    android:src="@drawable/pastabeef" />
                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/fabpasta2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginRight="6dp"
                    app:tint="@color/green"
                    android:backgroundTint="@color/white"
                    android:src="@drawable/baseline_add_24" />
            </RelativeLayout>


        </LinearLayout>

    </ScrollView>

</FrameLayout>